--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "autoprefixer": "^10.4.21",
     "bcryptjs": "^3.0.2",
     "cookie": "^1.0.2",
+    "date-fns": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
     "next": "15.3.0",
